--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 ﻿[data-amplify-authenticator] {
-  --amplify-colors-background-primary: #000;
-  --amplify-colors-background-secondary: #1a1a1a;
+  --amplify-colors-background-primary: #0b1437;
+  --amplify-colors-background-secondary: #111c44;
   --amplify-colors-brand-primary-80: #dc2626;
 }
