--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,7 @@
-﻿[data-amplify-authenticator] {
+[data-amplify-authenticator] {
   --amplify-colors-background-primary: #0b1437;
   --amplify-colors-background-secondary: #111c44;
   --amplify-colors-brand-primary-80: #dc2626;
+  --amplify-components-button-primary-background-color: #dc2626;
+  --amplify-components-button-primary-hover-background-color: #b91c1c;
 }
