--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-[data-amplify-authenticator] {
+﻿[data-amplify-authenticator] {
   --amplify-colors-background-primary: #0b1437;
   --amplify-colors-background-secondary: #111c44;
   --amplify-colors-brand-primary-80: #dc2626;
